<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_task_24"
        android:title="@string/item_crear_tarea"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_star_outline_24_crossed"
        android:title="@string/item_prioritarias"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_preferencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/preferencias" />
    <item
        android:id="@+id/item_estadisticas"
        android:title="Estadisticas" />
    <item
        android:id="@+id/item_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/item_acerca_de" />
    <item
        android:id="@+id/item_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_task_24"
        android:title="@string/item_salir" />

</menu>