<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/elemento_tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/elemento_tv_titulo"
                android:textColor="@color/primario_oscuro"
                android:textScaleX="1.05"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/baseline_stars_24_dark" />


            <LinearLayout
                android:id="@+id/elemento_segunda_fila_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/elemento_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/elemento_tv_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/elemento_tv_fecha"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/elemento_tv_quedan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elemento_tv_quedan"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/elemento_tv_ndias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elemento_tv_ndias"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/elemento_tv_dias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elemento_tv_dias" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>