<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.MainActivity">

    <iestrassierra.jlcamunas.trasstarea.animation.Figuras
        android:id="@+id/fondoAnimadoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/main_bt_empezar"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/main_bt_empezar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_iv_logo" />

    <TextView
        android:id="@+id/main_tv_eslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:maxWidth="250dp"
        android:maxLines="3"
        android:text="@string/main_tv_slogan"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/main_iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/main_iv_descripcion"
        app:layout_constraintBottom_toTopOf="@+id/main_bt_empezar"
        app:layout_constraintEnd_toEndOf="@+id/main_tv_eslogan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_tv_eslogan"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_eslogan"
        app:srcCompat="@drawable/icon_pablo" />

</androidx.constraintlayout.widget.ConstraintLayout>